--- a/source/assets/stylesheets/scss/layout/_nav.scss
+++ b/source/assets/stylesheets/scss/layout/_nav.scss
@@ -34,7 +34,7 @@
     .ch-menu-item-label,
     .ch-collapse-button-label,
     .ch-menu-item.ch-dropdown.open > .ch-dropdown-content {
-      display: initial;
+      display: block;
     }
   }
 
