--- a/source/assets/stylesheets/scss/partials/_menu.scss
+++ b/source/assets/stylesheets/scss/partials/_menu.scss
@@ -123,7 +123,7 @@
     }
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     .ch-nav & {
       > a,
       > button {
@@ -137,7 +137,6 @@
         }
       }
     }
-
 
     .ch-nav:not(.active) & {
 
@@ -180,6 +179,13 @@
           border-right: none;
           border-bottom: 5px solid $activeColor;
           @include transform(translate(50%, 0));
+        }
+      }
+
+      &.ch-dropdown {
+        > .ch-dropdown-content,
+        > .ch-dropdown-button > .fa-icon.dropdown {
+          display: none;
         }
       }
     }
